# django-socio-grpc

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README.rst  TODO  conftest.py  docker-compose.yml  index.html  lintall.sh  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.circleci/: config.yml
.github/workflows/: build-and-publish.yml  lint-test.yml
django_socio_grpc/: actions.py  admin.py  apps.py  cache.py  decorators.py  exceptions.py  filters.py  generics.py  grpc_action.py  log.py  middlewares.py  mixins.py  models.py  permissions.py  proto_serializers.py  server.py  servicer_proxy.py  services.py  settings.py  signals.py  views.py
django_socio_grpc/grpc_actions/: __init__.py  actions.py  placeholders.py  utils.py
django_socio_grpc/log/: callback.py  dbrouters.py  handlers.py  views.py
django_socio_grpc/management/: proto_compiler.py
django_socio_grpc/migrations/: 0029_auto_20210329_1335.py  0030_auto_20210329_1549.py  0031_auto_20210329_2203.py  0032_auto_20210401_1518.py  0033_auto_20210401_2307.py  0034_generallog_speciallog.py  0035_auto_20210402_0031.py  0036_grpclogging_port.py  0037_grpclogging_message.py  0038_grpclogging_time.py  0039_grpclogging_error.py  0040_grpclogging_reason.py
django_socio_grpc/protobuf/: __init__.py  app_handler_registry.py  exceptions.py  generation_plugin.py  generators.py  generators2.py  generators_old_way.py  json_format.py  message_name_constructor.py  proto_classes.py  registry_singleton.py  typing.py
django_socio_grpc/request_transformer/: __init__.py  grpc_internal_container.py  grpc_internal_proxy.py  grpc_socio_proxy_context.py  socio_internal_request.py  socio_internal_response.py
django_socio_grpc/services/: __init__.py  app_handler_registry.py  base_service.py  servicer_proxy.py
django_socio_grpc/tests/: test_actions.py  test_app_handler_registry.py  test_async_basic_service.py  test_async_enum_service.py  test_async_exception.py  test_async_model_service.py  test_async_model_service_in_async.py  test_async_stream_in.py  test_auth_without_session_middleware.py  test_authentication.py  test_basic_mixins.py  test_cache.py  test_default_value.py  test_enum_generation_plugin.py  test_filtering.py  test_filtering_metadata.py  test_filtering_request_struct.py  test_legacy_django_middlewares.py  test_locale_middleware.py  test_locale_middlewares.py  test_middlewares.py  test_model_service.py  test_ordering_metadata.py  test_ordering_request_struct.py  test_pagination.py  test_pagination_metadata.py  test_pagination_request_struct.py  test_permissions.py  test_placeholders.py  test_proto_generation.py  test_proto_generation_old_way.py  test_proto_serializer.py  test_protobuf_registration.py  test_run_server.py  test_sync_model_service.py  utils.py
django_socio_grpc/utils/: __init__.py  constants.py  credentials.py  debug.py  global_variables_service_factory.py  log.py  registry_singleton.py  servicer_register.py  ssl_credentials.py  tools.py  utils.py
docs/: conf.py  configuration.rst  contributing.rst  examples.rst  generate_proto.md  generate_proto_old_way.md  generic_service.md  getting-started.rst  index.md  index.rst  introduction.rst  proto_serializer.md  server_and_service_register.md  settings.md  settings.rst  sync_vs_async.md  testing.rst  troubleshooting.rst
docs/assets/: cache_deletor.mmd
docs/examples/: async-advanced-bib-example.rst  async-example.rst  async-simple-bib-example.rst  index.rst  sync-advanced-bib-example.rst  sync-example.rst  sync-simple-bib-example.rst
docs_from_grpc_framework/: installation.rst  protos.rst  server.rst
generate_proto/: index.html
generate_proto_old_way/: index.html
generic_service/: index.html
logging/: index.html
model_service/: index.html
permissions_and_authentication/: index.html
proto_serializer/: index.html
search/: search_index.json
server_and_service_register/: index.html
settings/: index.html
sync_vs_async/: index.html
test_utils/: boot_django.py  compilemessages.py  djangoshell.py  generate_proto_old_way.py  generateproto.py  generateproto2.py  load_tests.py  makemessages.py  makemigrations.py  migrate.py  runserver.py  test_runner.py
testing/: index.html
(+126 files in other folders)
