[tool.poetry]
name = "django-socio-grpc"
version = "0.1.1"
description = "Fork of django-grpc-framework with more feature maintained by the socio team. Make GRPC with django easy."
authors = ["Adrien Montagu <adrienmontagu@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
django = ">=2.2"
djangorestframework = "*"
# https://github.com/grpc/grpc/issues/31044
grpcio-tools = "^1.50.0"
lark-parser = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
flake8 = "*"
black = "*"
isort = "*"
django-filter = "^2.4.0"
psycopg2-binary = "^2.8.6"
pytest-django = "^4.2.0"
freezegun = "^1.1.0"
pre-commit = "^2.19.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
auto-pytabs = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
sphinx-autodoc-typehints = "*"
sphinxcontrib-apidoc = "*"
sphinxcontrib-spelling = "*"
sphinx-autobuild = "*"
myst-parser = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 95
include = '\.pyi?$'
force-exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | migrations
  | grpc
)/
'''

[tool.isort]
profile = "black"
include_trailing_comma = true
line_length = 95
multi_line_output = 3
use_parentheses = true
skip_glob = ["**/migrations/*","**/grpc/*"]

[tool.poetry.scripts]
tests = "test_utils.load_tests:launch"
